# pigar

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CHANGELOGS.rst  LICENSE  MANIFEST.in  README-PYPI.rst  README.md  README.rst  index.html  main.py  makefile  py2_requirements.txt  py3_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
pigar/: .db.sqlite3  __init__.py  __main__.py  _version.py  cmd.py  core.py  db.py  dist.py  helpers.py  log.py  modules.py  parser.py  pypi.py  reqs.py  unpack.py  utils.py  version.py
pigar/_vendor/: README.md  pip_vendor_requirements.txt  pyproject.toml  vendor.txt
pigar/_vendor/pip/: __init__.py  __main__.py
pigar/_vendor/pip/_internal/: __init__.py  build_env.py  cache.py  configuration.py  exceptions.py  main.py  pyproject.py  (+2 more)
pigar/extractor/: extractor.py  gevent_extractor.py  thread_extractor.py
pigar/tests/: __init__.py  fake_reqs.txt  fake_reqs_2.txt  fake_simple_html.txt  fake_top_level.txt  helper.py  run_tests.py  test_cli.py  test_cmd.py  test_core.py  test_db.py  test_dist.py  test_helpers.py  test_modules.py  test_pypi.py  test_reqs.py  test_unpack.py  test_utils.py
pigar/tests/data/: fake_reqs.txt  fake_simple_html.txt
pigar/tests/fake_git_conf/: config
pigar/tests/imports_example/: example1.py  example2.py  example3.py  notebook.ipynb
requirements/: py3.10.txt  py3.11.txt  py3.12.txt  py3.13.txt  py3.14.txt  py3.7.txt  py3.8.txt  py3.9.txt
x/: x.py
(+246 files in other folders)
